crates/keron-lang/tests/corpus/errors/check/multiple_mismatches.keron
val a: Int = "x"
val b: String = 2
val c: Boolean = 0.5
